src/actors/vendor/stb_image/stb_image.h

typedef unsigned char stbi_uc;
   STBIDEF stbi_uc *stbi_load(char const *filename, int *x, int *y, int *channels_in_file, int desired_channels);
   // get a VERY brief reason for failure
   // on most compilers (and ALL modern mainstream compilers) this is threadsafe
   STBIDEF const char *stbi_failure_reason(void);
   // free the loaded image -- this is just free()
   STBIDEF void stbi_image_free(void *retval_from_stbi_load);
   // flip the image vertically, so the first pixel in the output array is the bottom left
   STBIDEF void stbi_set_flip_vertically_on_load(int flag_true_if_should_flip);
   // as above, but only applies to images loaded on the thread that calls the function
   // this function is only available if your compiler supports thread-local variables;
   // calling it will fail to link if your compiler doesn't
   STBIDEF void stbi_set_flip_vertically_on_load_thread(int flag_true_if_should_flip);
STBIDEF const char *stbi_failure_reason(void)
{
   return stbi__g_failure_reason;
}
STBIDEF void stbi_image_free(void *retval_from_stbi_load)
{
   STBI_FREE(retval_from_stbi_load);
}
STBIDEF void stbi_set_flip_vertically_on_load(int flag_true_if_should_flip)
{
   stbi__vertically_flip_on_load_global = flag_true_if_should_flip;
}
STBIDEF void stbi_set_flip_vertically_on_load_thread(int flag_true_if_should_flip)
{
   stbi__vertically_flip_on_load_local = flag_true_if_should_flip;
   stbi__vertically_flip_on_load_set = 1;
}
STBIDEF stbi_uc *stbi_load(char const *filename, int *x, int *y, int *comp, int req_comp)
{
   FILE *f = stbi__fopen(filename, "rb");
   unsigned char *result;
   if (!f)
      return stbi__errpuc("can't fopen", "Unable to open file");
   result = stbi_load_from_file(f, x, y, comp, req_comp);
   fclose(f);
   return result;
}